<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="183dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/customborder"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quizsignalbedeutungtitle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:gravity="center"
            android:text="@string/quiz_text1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="156dp"
            android:layout_height="58dp"
            android:onClick="startTestBedeutungSignal"
            android:text="@string/button_quiz" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="399dp"
        android:layout_height="198dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/customborder"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/title_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quizsignalnametitle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_1"
            android:layout_width="371dp"
            android:layout_height="79dp"
            android:gravity="center"
            android:text="@string/quiz_text0"
            tools:text="@string/quiz_text0" />

        <Button
            android:id="@+id/btntest1"
            android:layout_width="159dp"
            android:layout_height="58dp"
            android:onClick="startTestNameSignal"
            android:text="@string/button_quiz"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>